// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Role Edit Panel should allow a new role to be created 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -35,13 +35,14 @@
        </h4>
        <div
          class=\\"rs-drawer-actions\\"
        >
          <button
-           aria-disabled=\\"false\\"
-           class=\\"rs-btn rs-btn-primary\\"
+           aria-disabled=\\"true\\"
+           class=\\"rs-btn rs-btn-primary rs-btn-disabled\\"
            data-testid=\\"saveButton\\"
+           disabled=\\"\\"
            type=\\"submit\\"
          >
            userRoles.panels.create
            <span
              class=\\"rs-ripple-pond\\"
@@ -85,14 +86,15 @@
          >
            <input
              aria-describedby=\\"name-help-text\\"
              aria-labelledby=\\"name-control-label\\"
              class=\\"rs-input\\"
+             disabled=\\"\\"
              id=\\"name\\"
              name=\\"name\\"
              type=\\"text\\"
-             value=\\"\\"
+             value=\\"Brand New User Role\\"
            />
          </div>
        </div>
        <div
          class=\\"rs-form-group\\"
@@ -110,14 +112,15 @@
          >
            <input
              aria-describedby=\\"description-help-text\\"
              aria-labelledby=\\"description-control-label\\"
              class=\\"rs-input\\"
+             disabled=\\"\\"
              id=\\"description\\"
              name=\\"userRoles.panels.description\\"
              type=\\"text\\"
-             value=\\"\\"
+             value=\\"A user role to be added to snapshot\\"
            />
          </div>
        </div>
        <div
          class=\\"rs-form-group\\""
`;

exports[`User Role Edit Panel should have Toggle sliders disabled with System Role 1`] = `
<DocumentFragment>
  <form
    class="rs-form rs-form-vertical rs-form-fluid"
    style="height: 100%;"
  >
    <div
      class="rs-drawer-header"
    >
      <span
        aria-label="Close"
        class="rs-drawer-header-close rs-btn-close"
        role="button"
        title="Close"
      >
        <svg
          aria-hidden="true"
          aria-label="close"
          class="rs-icon"
          data-category="application"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z"
          />
        </svg>
      </span>
      <h4
        class="rs-drawer-title"
      >
        userRoles.panels.editUserRole
      </h4>
      <div
        class="rs-drawer-actions"
      >
        <button
          aria-disabled="true"
          class="rs-btn rs-btn-primary rs-btn-disabled"
          data-testid="saveButton"
          disabled=""
          type="submit"
        >
          userRoles.panels.save
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
        <button
          class="rs-btn rs-btn-subtle"
          type="button"
        >
          userRoles.panels.close
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
      </div>
    </div>
    <div
      class="rs-drawer-body"
    >
      <div
        class="rs-form-group"
        role="group"
      >
        <label
          class="rs-form-control-label"
          for="name"
          id="name-control-label"
        >
          userRoles.panels.name*
        </label>
        <div
          class="rs-form-control rs-form-control-wrapper"
        >
          <input
            aria-describedby="name-help-text"
            aria-labelledby="name-control-label"
            class="rs-input"
            disabled=""
            id="name"
            name="name"
            type="text"
            value="Role 1"
          />
        </div>
      </div>
      <div
        class="rs-form-group"
        role="group"
      >
        <label
          class="rs-form-control-label"
          for="description"
          id="description-control-label"
        >
          userRoles.panels.description
        </label>
        <div
          class="rs-form-control rs-form-control-wrapper"
        >
          <input
            aria-describedby="description-help-text"
            aria-labelledby="description-control-label"
            class="rs-input"
            disabled=""
            id="description"
            name="userRoles.panels.description"
            type="text"
            value="Description for role 1"
          />
        </div>
      </div>
      <p>
        userRoles.panels.systemRole
      </p>
      <div
        class="rs-form-group"
        role="group"
      >
        <label
          class="rs-form-control-label"
        >
          userRoles.panels.permissions
        </label>
        <div
          class="rs-picker rs-picker-check rs-picker-default rs-picker-toggle-wrapper rs-picker-has-value rs-picker-cleanable rs-picker-block rs-picker-countable"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="rs-picker-toggle rs-btn rs-btn-default"
            role="combobox"
            tabindex="0"
          >
            <input
              aria-hidden="true"
              class="rs-picker-toggle-textbox rs-picker-toggle-read-only"
              readonly=""
              tabindex="-1"
              value="permissionId1,permissionId2"
            />
            <span
              class="rs-picker-toggle-value"
            >
              <span
                class="rs-picker-value-list"
                title="permission description 1, permission description 2"
              >
                <span
                  class="rs-picker-value-item"
                >
                  permission description 1
                </span>
                <span
                  class="rs-picker-value-separator"
                >
                  ,
                </span>
                <span
                  class="rs-picker-value-item"
                >
                  permission description 2
                </span>
              </span>
              <span
                class="rs-picker-value-count"
                title="2"
              >
                2
              </span>
            </span>
            <span
              aria-label="Clear"
              class="rs-picker-toggle-clean rs-btn-close"
              role="button"
              tabindex="-1"
              title="Clear"
            >
              <svg
                aria-hidden="true"
                aria-label="close"
                class="rs-icon"
                data-category="application"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z"
                />
              </svg>
            </span>
            <svg
              aria-hidden="true"
              aria-label="angle down"
              class="rs-picker-toggle-caret rs-icon"
              data-category="legacy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 21 32"
              width="1em"
            >
              <path
                d="M19.196 13.143a.612.612 0 01-.179.411l-8.321 8.321c-.107.107-.268.179-.411.179s-.304-.071-.411-.179l-8.321-8.321c-.107-.107-.179-.268-.179-.411s.071-.304.179-.411l.893-.893a.582.582 0 01.411-.179c.143 0 .304.071.411.179l7.018 7.018 7.018-7.018c.107-.107.268-.179.411-.179s.304.071.411.179l.893.893a.617.617 0 01.179.411z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`User Role Edit Panel should render 1`] = `
<DocumentFragment>
  <form
    class="rs-form rs-form-vertical rs-form-fluid"
    style="height: 100%;"
  >
    <div
      class="rs-drawer-header"
    >
      <span
        aria-label="Close"
        class="rs-drawer-header-close rs-btn-close"
        role="button"
        title="Close"
      >
        <svg
          aria-hidden="true"
          aria-label="close"
          class="rs-icon"
          data-category="application"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z"
          />
        </svg>
      </span>
      <h4
        class="rs-drawer-title"
      >
        userRoles.panels.createUserRole
      </h4>
      <div
        class="rs-drawer-actions"
      >
        <button
          aria-disabled="false"
          class="rs-btn rs-btn-primary"
          data-testid="saveButton"
          type="submit"
        >
          userRoles.panels.create
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
        <button
          class="rs-btn rs-btn-subtle"
          type="button"
        >
          userRoles.panels.close
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
      </div>
    </div>
    <div
      class="rs-drawer-body"
    >
      <div
        class="rs-form-group"
        role="group"
      >
        <label
          class="rs-form-control-label"
          for="name"
          id="name-control-label"
        >
          userRoles.panels.name*
        </label>
        <div
          class="rs-form-control rs-form-control-wrapper"
        >
          <input
            aria-describedby="name-help-text"
            aria-labelledby="name-control-label"
            class="rs-input"
            id="name"
            name="name"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="rs-form-group"
        role="group"
      >
        <label
          class="rs-form-control-label"
          for="description"
          id="description-control-label"
        >
          userRoles.panels.description
        </label>
        <div
          class="rs-form-control rs-form-control-wrapper"
        >
          <input
            aria-describedby="description-help-text"
            aria-labelledby="description-control-label"
            class="rs-input"
            id="description"
            name="userRoles.panels.description"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="rs-form-group"
        role="group"
      >
        <label
          class="rs-form-control-label"
        >
          userRoles.panels.permissions
        </label>
        <div
          class="rs-picker rs-picker-check rs-picker-default rs-picker-toggle-wrapper rs-picker-cleanable rs-picker-block rs-picker-countable"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="rs-picker-toggle rs-btn rs-btn-default"
            role="combobox"
            tabindex="0"
          >
            <input
              aria-hidden="true"
              class="rs-picker-toggle-textbox rs-picker-toggle-read-only"
              readonly=""
              tabindex="-1"
              value=""
            />
            <span
              aria-placeholder="Select"
              class="rs-picker-toggle-placeholder"
            >
              Select
            </span>
            <svg
              aria-hidden="true"
              aria-label="angle down"
              class="rs-picker-toggle-caret rs-icon"
              data-category="legacy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 21 32"
              width="1em"
            >
              <path
                d="M19.196 13.143a.612.612 0 01-.179.411l-8.321 8.321c-.107.107-.268.179-.411.179s-.304-.071-.411-.179l-8.321-8.321c-.107-.107-.179-.268-.179-.411s.071-.304.179-.411l.893-.893a.582.582 0 01.411-.179c.143 0 .304.071.411.179l7.018 7.018 7.018-7.018c.107-.107.268-.179.411-.179s.304.071.411.179l.893.893a.617.617 0 01.179.411z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`User Role Edit Panel should render with role 1`] = `
<DocumentFragment>
  <form
    class="rs-form rs-form-vertical rs-form-fluid"
    style="height: 100%;"
  >
    <div
      class="rs-drawer-header"
    >
      <span
        aria-label="Close"
        class="rs-drawer-header-close rs-btn-close"
        role="button"
        title="Close"
      >
        <svg
          aria-hidden="true"
          aria-label="close"
          class="rs-icon"
          data-category="application"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z"
          />
        </svg>
      </span>
      <h4
        class="rs-drawer-title"
      >
        userRoles.panels.editUserRole
      </h4>
      <div
        class="rs-drawer-actions"
      >
        <button
          aria-disabled="false"
          class="rs-btn rs-btn-primary"
          data-testid="saveButton"
          type="submit"
        >
          userRoles.panels.save
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
        <button
          class="rs-btn rs-btn-subtle"
          type="button"
        >
          userRoles.panels.close
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
      </div>
    </div>
    <div
      class="rs-drawer-body"
    >
      <div
        class="rs-form-group"
        role="group"
      >
        <label
          class="rs-form-control-label"
          for="name"
          id="name-control-label"
        >
          userRoles.panels.name*
        </label>
        <div
          class="rs-form-control rs-form-control-wrapper"
        >
          <input
            aria-describedby="name-help-text"
            aria-labelledby="name-control-label"
            class="rs-input"
            id="name"
            name="name"
            type="text"
            value="Role 1"
          />
        </div>
      </div>
      <div
        class="rs-form-group"
        role="group"
      >
        <label
          class="rs-form-control-label"
          for="description"
          id="description-control-label"
        >
          userRoles.panels.description
        </label>
        <div
          class="rs-form-control rs-form-control-wrapper"
        >
          <input
            aria-describedby="description-help-text"
            aria-labelledby="description-control-label"
            class="rs-input"
            id="description"
            name="userRoles.panels.description"
            type="text"
            value="Description for role 1"
          />
        </div>
      </div>
      <div
        class="rs-form-group"
        role="group"
      >
        <label
          class="rs-form-control-label"
        >
          userRoles.panels.permissions
        </label>
        <div
          class="rs-picker rs-picker-check rs-picker-default rs-picker-toggle-wrapper rs-picker-has-value rs-picker-cleanable rs-picker-block rs-picker-countable"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="rs-picker-toggle rs-btn rs-btn-default"
            role="combobox"
            tabindex="0"
          >
            <input
              aria-hidden="true"
              class="rs-picker-toggle-textbox rs-picker-toggle-read-only"
              readonly=""
              tabindex="-1"
              value="permissionId1,permissionId2,permissionId3,permissionId4"
            />
            <span
              class="rs-picker-toggle-value"
            >
              <span
                class="rs-picker-value-list"
                title="permission description 1, permission description 2, permission description 3, permission description 4"
              >
                <span
                  class="rs-picker-value-item"
                >
                  permission description 1
                </span>
                <span
                  class="rs-picker-value-separator"
                >
                  ,
                </span>
                <span
                  class="rs-picker-value-item"
                >
                  permission description 2
                </span>
                <span
                  class="rs-picker-value-separator"
                >
                  ,
                </span>
                <span
                  class="rs-picker-value-item"
                >
                  permission description 3
                </span>
                <span
                  class="rs-picker-value-separator"
                >
                  ,
                </span>
                <span
                  class="rs-picker-value-item"
                >
                  permission description 4
                </span>
              </span>
              <span
                class="rs-picker-value-count"
                title="4"
              >
                4
              </span>
            </span>
            <span
              aria-label="Clear"
              class="rs-picker-toggle-clean rs-btn-close"
              role="button"
              tabindex="-1"
              title="Clear"
            >
              <svg
                aria-hidden="true"
                aria-label="close"
                class="rs-icon"
                data-category="application"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z"
                />
              </svg>
            </span>
            <svg
              aria-hidden="true"
              aria-label="angle down"
              class="rs-picker-toggle-caret rs-icon"
              data-category="legacy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 21 32"
              width="1em"
            >
              <path
                d="M19.196 13.143a.612.612 0 01-.179.411l-8.321 8.321c-.107.107-.268.179-.411.179s-.304-.071-.411-.179l-8.321-8.321c-.107-.107-.179-.268-.179-.411s.071-.304.179-.411l.893-.893a.582.582 0 01.411-.179c.143 0 .304.071.411.179l7.018 7.018 7.018-7.018c.107-.107.268-.179.411-.179s.304.071.411.179l.893.893a.617.617 0 01.179.411z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
